cabal-version:      3.0
name:               railroad
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederik Kallstrup Mastratisi
maintainer:         mastratisi@proton.me
category:           Control, Error Handling
build-type:         Simple
extra-doc-files:    CHANGELOG.md
synopsis:           A railway oriented mini-DSL for unified error handling.
description:
    A railway oriented mini-DSL for handling and interpreting error states 
    and cardinality checks across diverse failure types in a unified way.
homepage:     https://github.com/mastratisi/railroad
bug-reports:  https://github.com/mastratisi/railroad/issues
source-repository head
  type:     git
  location: https://github.com/mastratisi/railroad

common stuff
    ghc-options: -Wall
    build-depends:
      base ^>=4.20.2.0,
      effectful >= 2.5.1 && < 2.6,
      mtl >= 2.3.1 && < 2.4,
      validation >= 1.1.3 && < 1.2

library
    import:           stuff
    exposed-modules:  Railroad
                      
    hs-source-dirs:   src
    default-language: GHC2021
    

test-suite railroad-test
    import:           stuff
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    RailroadSpec
    build-depends:
                  base ^>=4.20.2.0,
                  hspec  >= 2.11.14 && < 2.12,
                  railroad
